--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.2"
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         applicationId "com.lrs.lrsmeeting"
@@ -14,7 +14,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
-        ndk { abiFilters "armeabi", "armeabi-v7a", 'arm64', "x86_64" }
+        ndk { abiFilters "armeabi", "armeabi-v7a", 'arm64', "x86_64", "x86" }
     }
     useLibrary 'org.apache.http.legacy'
 
