--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="HardcodedDebugMode">
-        <activity android:name=".activity.setting.SetingActivity"></activity>
+        <activity android:name=".activity.myOreder.OrderActivity"></activity>
+        <activity android:name=".activity.setting.SetingActivity" />
         <activity android:name=".activity.meeting.CodeOpenActivity" />
         <activity android:name=".activity.about.AboutActivity" />
         <activity android:name=".activity.meeting.MeetingWebViewActivity" />
